--- a/pages/reimbursementManage/reimbursementManage.wxml
+++ b/pages/reimbursementManage/reimbursementManage.wxml
@@ -13,13 +13,13 @@
 	</nav-content>
 
 	<view class="flex bgColorWhite jcsb fz25" style="height: 48px;border-bottom: 1px solid #eaeaea;">
-		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="group">小组
+		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="group">{{group_name || "小组"}}
 			<van-icon class="ml5 pt5" name="arrow-down" />
 		</view>
-		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="status">状态
+		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="status">{{status_name || "状态"}}
 			<van-icon class="ml5 pt5" name="arrow-down" />
 		</view>
-		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="date">日期
+		<view class="w25 h100 flex aic jcc" bindtap="openPicker" data-type="date">{{date_name || "日期"}}
 			<van-icon class="ml5 pt5" name="arrow-down" />
 		</view>
 	</view>
