--- a/pages/billingManagement/packingOrder/packingOrderDetail.wxml
+++ b/pages/billingManagement/packingOrder/packingOrderDetail.wxml
@@ -52,7 +52,13 @@
 		<view class="title">额外信息</view>
 		<view wx:for="{{info.info_data}}">
 			<view class="flex mt10">
-				<view class="w30 color6">包装名</view>
+				<view class="w30 color6 flex">
+					<view class="bgColor27A2 colorWhite tc"
+						style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">
+						{{index+1}}
+					</view>
+					<view class="ml10">包装名称</view>
+				</view>
 				<view class="w70 color27A2">
 					{{ item.pack_material_name }}
 				</view>
