--- a/pages/billingManagement/productionPlan/productionPlanDetail.wxml
+++ b/pages/billingManagement/productionPlan/productionPlanDetail.wxml
@@ -135,7 +135,13 @@
 		<view class="title">原料信息</view>
 		<view wx:for="{{materialPlanInfo}}">
 			<view class="flex mt10">
-				<view class="w30 color6">原料名称</view>
+				<view class="w30 color6 flex">
+					<view class="bgColor27A2 colorWhite tc"
+						style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">
+						{{index+1}}
+					</view>
+					<view class="ml10">原料名称</view>
+				</view>
 				<view class="w70 color27A2">
 					{{ item.material_name }}
 				</view>
