--- a/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
+++ b/pages/billingManagement/transportationDeliveryOrder/transportationDeliveryOrderDetail.wxml
@@ -107,7 +107,13 @@
 		<view class="title">产品信息</view>
 		<view wx:for="{{info.rel_batch}}">
 			<view class="flex mt10">
-				<view class="w30 color6">产品名称</view>
+				<view class="w30 color6 flex">
+					<view class="bgColor27A2 colorWhite tc"
+						style="border-radius: 500px;width:25px;height: 25px;line-height: 25px;">
+						{{index+1}}
+					</view>
+					<view class="ml10">产品名称</view>
+				</view>
 				<view class="w70 color27A2">
 					{{ item.product_code }}({{ item.category }}/{{ item.secondary_category }})
 				</view>
