--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,7 +8,9 @@
 	<view class="flex flexWarp jcsa">
 		<view wx:if="{{isLogin}}" class="card tc" wx:for="{{list}}" wx:for-item="item" wx:key="item" wx:for-index="index"
 			data-src="{{item.src}}" bindtap="toDetailPage">
-			<view class="vh8"></view>
+			<view class="vh8">
+				<image src="{{item.icon}}" style="width: 7vh;height: 7vh;"></image>
+			</view>
 			<view>{{item.title}}</view>
 		</view>
 	</view>
